ENYO-3662: Fix scrollbar bounds is not updated
https://jira2.lgsvl.com/browse/ENYO-3662
Enyo-DCO-1.1-Signed-off-by: Bongsub Kim <bongsub.kim@lgepartner.com>

--- a/packages/moonstone/Scroller/Scrollable.less
+++ b/packages/moonstone/Scroller/Scrollable.less
@@ -25,6 +25,12 @@
 
 .scrollableHiddenScrollbars {
 	overflow: hidden;
+	.padding-start-end(0, 0);
+	padding-bottom: 0;
+}
+
+.scrollableHiddenVerticalScrollbar, .scrollableHiddenHorizontalScrollbar {
+	visibility: hidden;
 }
 
 .takeAvailableSpaceForHorizontal {
